# pyemoji2

./: .gitignore  BUILD_README.md  CHANGELOG.md  LICENSE  README.md  build_local.py  pyproject.toml  requirements.txt  setup.py  test_advanced.py  test_pyemoji2.py
.github/workflows/: build.yml  publish.yml
c/: Makefile  emoji_img.c  emoji_img.h  main.c
docs/: README.md
examples/: README.md  advanced_styling.py  basic_usage.py  test_color.py
pyemoji2/: __init__.py  core.py  text.py
