[project]
name = "pyemoji2"
authors = [
    { name = "GrandpaEJ", email = "grandpaej@grandpaacademy.org" }
]

version = "0.1.2"
license = "Apache-2.0"
description = "Add text to images using emojis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "imgrs>=0.2.10"
]
pil = [
    "pillow>=10.0.0"
]
imgrs = [
    "imgrs>=0.3.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyemoji2"]

[tool.setuptools.packages.find]
where = ["."]

[[tool.setuptools.ext_modules]]
name = "pyemoji2._emoji_img"
sources = ["c/emoji_img.c"]
include_dirs = ["c/include"]
